# shook

./: .pre-commit-config.yaml  Cargo.toml  README.md  config.yml
.github/workflows/: release.yml
doc/: GITHUB_SETUP.md  MACOS_SETUP.md  SETUP.md
service-files/: com.geoffjay.shook.plist  shook.service
src/: cmd.rs  config.rs  main.rs  webhook.rs
src/webhook/: github.rs  gitlab.rs
