[package]
name = "shook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = "0.4.0"
clap = "2.33.3"
futures = "0.3.17"
serde = "1.0.130"
serde_json = "1.0.68"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.4.0"
slog-scope = "4.4.0"
