[package]
name = "shook"
version = "0.2.0"
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]
description = "Service to listen to Webhook events and execute a set of commands"
edition = "2018"
license = "MIT"
documentation = "https://github.com/geoffjay/shook"
homepage = "https://github.com/geoffjay/shook"
repository = "https://github.com/geoffjay/shook"
readme = "README.md"
keywords = ["gitlab", "github", "webhook", "deployment", "automation"]
categories = ["command-line-utilities", "web-programming::http-client"]

[dependencies]
actix-slog = "0.2.1"
actix-web = "3.3.2"
async-std = "1.10.0"
chrono = "0.4.0"
clap = "2.33.3"
futures = "0.3.17"
git2 = "0.13.23"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
sha2 = "0.10.6"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.4.0"
slog-scope = "4.4.0"
